// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Utils should match snapshot 1`] = `
<div
  class="item"
>
  <!---->
   
  <div
    class="inner-item"
  />
   
  <div
    class="arrow"
  />
</div>
`;

exports[`Tree Utils should match snapshot if expanded 1`] = `
<div
  class="item expanded"
>
  <!---->
   
  <div
    class="inner-item"
  />
   
  <div
    class="arrow"
  />
</div>
`;
